@@ -89,7 +89,8 @@ uInt8 CartridgeMDM::peek(uInt16 address)
 {
   // Because of the way we've set up accessing above, we can only
   // get here when the addresses are from 0x800 - 0xFFF
-  bank(address & 0x0FF);
+  if(address < 0xC00)
+    bank(address & 0x0FF);
 
   int hotspot = ((address & 0x0F00) >> 8) - 8;
   return myHotSpotPageAccess[hotspot].device->peek(address);
@@ -102,7 +103,8 @@ bool CartridgeMDM::poke(uInt16 address, uInt8 value)
   // about those below $1000
   if(!(address & 0x1000))
   {
-    bank(address & 0x0FF);
+    if(address < 0xC00)
+      bank(address & 0x0FF);
 
     int hotspot = ((address & 0x0F00) >> 8) - 8;
     myHotSpotPageAccess[hotspot].device->poke(address, value);
